# goodEgg-RT685

./: .gitignore  CMakeLists.txt  Kconfig  compile_commands.json  device-config.json  prj.conf  rt685_ram_boot.yaml
app/src/: adpd188bi_smoke_detector.c  adpd_driver_test.c  bme688_driver.c  cd4066b_interconnect_test.c  esp_hosted_test.c  led_driver.c  lte_modem_test.c  main.c  mqtt_manager.c  mqtt_manager.h  mqtt_over_lte_test.c  sine_data.h  tas2563_driver_test.c  tcp_client.c
boards/goodSeed/goodEgg/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.goodEgg  board.cmake  board.yml  goodEgg_mimxrt685s_cm33.dts  goodEgg_mimxrt685s_cm33.yaml  goodEgg_mimxrt685s_hifi4.dts  goodEgg_mimxrt685s_hifi4.yaml  mimxrt685_evk-pinctrl.dtsi
drivers/: Kconfig
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/adpd188/: CMakeLists.txt  Kconfig
modules/adpd188/: CMakeLists.txt
modules/adpd188/drivers/: Kconfig
modules/adpd188/drivers/adpd188/: CMakeLists.txt  Kconfig  adpd188bi.c  iio_adpd188.c
modules/adpd188/dts/bindings/: analog_adpd188.yaml
modules/adpd188/include/zephyr/drivers/: adpd188bi.h
modules/cd4066b/drivers/: CMakeLists.txt  Kconfig
modules/cd4066b/drivers/cd4066b/: CMakeLists.txt  Kconfig  cd4066b.c
modules/cd4066b/dts/bindings/: ti,cd4066b.yaml
modules/cd4066b/include/zephyr/drivers/: cd4066b.h
modules/cd4066b/zephyr/: module.yml
modules/esp_hosted/drivers/: CMakeLists.txt  Kconfig
modules/esp_hosted/drivers/esp_hosted/: CMakeLists.txt  Kconfig  esp_hosted_hal_sdio.c  esp_hosted_hal_sdio.h  esp_hosted_wifi.c  esp_hosted_wifi.h
modules/esp_hosted/dts/bindings/: espressif,esp-hosted-sdio.yaml
modules/esp_hosted/zephyr/: module.yml
modules/ledPI22TAT5/ledPI22TAT5/drivers/: CMakeLists.txt  Kconfig
modules/ledPI22TAT5/ledPI22TAT5/drivers/ledPI22TAT5/: CMakeLists.txt  Kconfig
modules/ledPI22TAT5/ledPI22TAT5/dts/bindings/: inolux_ledpi22tat
modules/tas2563/drivers/: CMakeLists.txt  Kconfig
modules/tas2563/drivers/tas2563/: CMakeLists.txt  Kconfig  OSL_wrapper.c  OSL_wrapper.h  TAS2563_ftcfg.h  tas2563.h  tas2563_driver.c  tas2563_ftc.c  tas2563_ftc_lib.h  tasdevice.c  tasdevice.h
modules/tas2563/drivers/tas2563/coef/: cfg0_music_COEFF_prim.h  cfg0_music_COEFF_quat.h  cfg0_music_COEFF_sec.h  cfg0_music_COEFF_tert.h  cfg0_pdm_music_COEFF.h  cfg1_calibration_COEFF.h  cfg1_pdm_calibration_COEFF.h  cfg2_Voice_COEFF_prim.h  cfg2_Voice_COEFF_quat.h  cfg2_Voice_COEFF_sec.h  cfg2_Voice_COEFF_tert.h
modules/tas2563/drivers/tas2563/prm_reg/: prm_pdm_tuning_mode.h  prm_tuning_mode.h  register_setting.h
modules/tas2563/dts/bindings/: ti_tas2563.yaml
modules/tas2563/zephyr/: module.yml
rt685_image_config.yaml/: bootimg_mimxrt685s_emmc.yaml  bootimg_mimxrt685s_flexspi_nor.yaml  bootimg_mimxrt685s_recovery_spi_mbi.yaml  bootimg_mimxrt685s_recovery_spi_sb21.yaml  bootimg_mimxrt685s_sd.yaml
src/: adc_sequence.c  bme688_driver.c  main.c
(+1 files in other folders)
